# parsco

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  combinator.cpp  error.cpp  ext-basic.cpp  magic.cpp
src/example/: CMakeLists.txt  hello-world-parser.cpp  ip-address-parser.cpp  json-model.hpp  json-parser.cpp
src/include/parsco/: combinator.hpp  compat.hpp  concepts.hpp  error.hpp  ext-basic.hpp  ext-std.hpp  ext.hpp  magic.hpp  parser.hpp  promise.hpp  runner.hpp  unique-coro.hpp  unreachable.hpp
